--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,14 +28,86 @@
    --text-color-light: hsl(0, 0%, 64%);
    --body-color: hsl(0, 0%, 87%);
    --container-color: hsl(0, 0%, 83%);
-}
 
-  /**
+   /**
    *TYPOGRAPHY
    */
-   
+
+   /* font-family */
+
+  --fontFamily-forum: 'Forum', cursive;
+  --fontFamily-dm_sans: 'DM Sans', sans-serif;
 
 
+  /* font-size */
+
+  --fontSize-display-1: calc(1.3rem + 6.7vw);
+  --fontSize-headline-1: calc(2rem + 2.5vw);
+  --fontSize-headline-2: calc(1.3rem + 2.4vw);
+  --fontSize-title-1: calc(1.6rem + 1.2vw);
+  --fontSize-title-2: 2.2rem;
+  --fontSize-title-3: 2.1rem;
+  --fontSize-title-4: calc(1.6rem + 1.2vw);
+  --fontSize-body-1: 2.4rem;
+  --fontSize-body-2: 1.6rem;
+  --fontSize-body-3: 1.8rem;
+  --fontSize-body-4: 1.6rem;
+  --fontSize-label-1: 1.4rem;
+  --fontSize-label-2: 1.2rem;
+
+
+  /* font-weight */
+  --weight-regular: 400;
+  --weight-bold: 700;
+
+
+  /* line-height */
+  --lineHeight-1: 1em;
+  --lineHeight-2: 1.2em;
+  --lineHeight-3: 1.5em;
+  --lineHeight-4: 1.6em;
+  --lineHeight-5: 1.85em;
+  --lineHeight-6: 1.4em;
+
+
+  /* letter-spacing */
+  --letterSpacing-1: 0.15em;
+  --letterSpacing-2: 0.4em;
+  --letterSpacing-3: 0.2em;
+  --letterSpacing-4: 0.3em;
+  --letterSpacing-5: 3px;
+
+    /**
+   *SPACING 
+   */
+
+   --section-space: 70px;
+
+
+   /**
+    *SHADOW 
+    */
+ 
+   --shadow-1: 0px 0px 25px 0px hsla(0, 0%, 0%, 0.25);
+ 
+ 
+   /**
+    *BORDER RADIUS 
+    */
+ 
+   --radius-24: 24px;
+   --radius-circle: 50%;
+ 
+ 
+   /**
+    *TRANSITION 
+    */
+ 
+   --transition-1: 250ms ease;
+   --transition-2: 500ms ease;
+   --transition-3: 1000ms ease;
+
+}
 
 
 
@@ -43,6 +115,78 @@
  #RESET
 \*-------------------------------*/
 
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+li {list-style: none;}
+
+a,
+img,
+data,
+span,
+input,
+button,
+select,
+ion-icon,
+textarea { display: block;}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {height: auto;}
+
+input,
+button,
+select,
+textarea {
+  background: none;
+  border: none;
+  font: inherit;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  outline: none;
+}
+
+button { cursor: pointer;}
+
+address { font-style: normal;}
+
+html {
+  font-size: 10px;
+  scroll-behavior: smooth;
+}
+
+body{
+  background-color: var(--eerie-black-1);
+  color: var(--white);
+  font-family: var(--fontFamily-dm_sans);
+  font-size: var(--fontSize-body-4);
+  font-weight: var(--weight-regular);
+  line-height: var(--lineHeight-5);
+  overflow: overlay;
+  height: 300vh;
+}
+
+body.loaded {overflow: overlay;}
+
+body.nav-active {overflow: hidden;}
+
+::-webkit-scrollbar {width: 5px;}
+
+::-webkit-scrollbar-track {background-color: transparent;}
+
+::-webkit-scrollbar-thumb {background-color: hsl(0, 0%, 70%);}
 
 
 
