--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,13 @@
    --body-color: hsl(0, 0%, 87%);
    --container-color: hsl(0, 0%, 83%);
 
+   /** 
+   *GRADIENT COLOR
+   */
+
+  --loading-text-gradient: linear-gradient(90deg, transparent 0% 16.66%, var(--smoky-black-3) 33.33% 50%,  transparent 66.66% 75%);
+  --gradient-1: linear-gradient(to top,hsla(0, 0%, 0%, 0.9),hsla(0, 0%, 0%, 0.7),transparent);
+
    /**
    *TYPOGRAPHY
    */
