--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,3 +209,17 @@ body.nav-active {overflow: hidden;}
 /*-------------------------------*\
  #REUSED STYLE
 \*-------------------------------*/
+
+
+
+
+
+
+/*-------------------------------*\
+ #PRELOAD
+\*-------------------------------*/
+
+.preload {
+  position: fixed;
+  
+}
