--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,3 +289,12 @@ body.nav-active {overflow: hidden;}
   justify-items: center;
   transition: var(--transition-2);
 }
+
+.preload > * { transition: var(--transition-2); }
+
+.preload.loaded > * { opacity: 0; }
+
+.preload.loaded {
+  transition-delay: 250ms;
+  transform: translateY(100%);
+}
