--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,3 +298,18 @@ body.nav-active {overflow: hidden;}
   transition-delay: 250ms;
   transform: translateY(100%);
 }
+
+.circle {
+  width: 100px;
+  height: 100px;
+  border-radius: var(--radius-circle);
+  border: 3.5 solid var(--black);
+  border-block-start-color: blue;
+  margin-block-end: 45px;
+  animation: rotate360 1s linear infinite;
+}
+
+@keyframes rotate360 {
+  0% { transform:  rotate(0);}
+  100% { transform:  rotate(1turn);}
+}
