--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,8 +303,8 @@ body.nav-active {overflow: hidden;}
   width: 100px;
   height: 100px;
   border-radius: var(--radius-circle);
-  border: 3.5 solid var(--black);
-  border-block-start-color: blue;
+  border: 3.5 solid var(--white);
+  border-block-start-color: var(--smoky-black-3);
   margin-block-end: 45px;
   animation: rotate360 1s linear infinite;
 }
