--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,7 +282,7 @@ body.nav-active {overflow: hidden;}
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: black;
+  background-color: var(--black);
   z-index: 10;
   display: grid;
   place-content: center;
@@ -300,8 +300,8 @@ body.nav-active {overflow: hidden;}
 }
 
 .circle {
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   border-radius: var(--radius-circle);
   border: 3.5 solid var(--white);
   border-block-start-color: var(--smoky-black-3);
