--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,11 +299,11 @@ body.nav-active {overflow: hidden;}
   transform: translateY(100%);
 }
 
-.circle {
-  width: 110px;
-  height: 110px;
-  border-radius: var(--radius-circle);
-  border: 3.5px solid var(--white);
+.rectangulo {
+  width: 100px;
+  height: 50px;
+  border-radius: var(--weight-regular);
+  border: 5px solid var(--white);
   border-block-start-color: var(--smoky-black-3);
   margin-block-end: 45px;
   animation: rotate360 1s linear infinite;
