--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,7 +302,7 @@ body.nav-active {overflow: hidden;}
 .rectangulo {
   width: 100px;
   height: 50px;
-  border-radius: var(--weight-regular);
+  border-radius: var(--radius-circler);
   border: 5px solid var(--white);
   border-block-start-color: var(--smoky-black-3);
   margin-block-end: 45px;
