--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,12 +302,19 @@ body.nav-active {overflow: hidden;}
 .incio {
   width: 100px;
   height: 50px;
-  border-radius: 10%;
-  margin-block-end: 45px;
-  animation: rotate360 1s linear infinite;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes rotate360 {
-  0% { transform:  rotate(0);}
-  100% { transform:  rotate(1turn);}
+.incio::before {
+  content: "";
+  position: absolute;
+  height: 300px;
+  width: 300px;
+  background-image: conic-gradient(--white 20deg, transparent 120deg);
 }
+
+
