--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,6 +302,7 @@ body.nav-active {overflow: hidden;}
 .rectangulo {
   width: 100px;
   height: 50px;
+  background-color: aliceblue;
   position: relative;
   overflow: hidden;
   display: flex;
