--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,7 +302,7 @@ body.nav-active {overflow: hidden;}
 .rectangulo {
   width: 70px;
   height: 120px;
-  margin-top: -auto;
+  margin-top: -100px;
   background-color: aliceblue;
   position: relative;
   overflow: hidden;
