--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,8 +328,17 @@ body.nav-active {overflow: hidden;}
   }
 }
 
+.rectangulo::after {
+  content: "";
+  position: absolute;
+  height: 130px;
+  width: 80px;
+  background-color: aliceblue;
+}
+
 .inicio{
-  margin-top: 150px;
+
+  margin-top: -150px;
 }
 
 
