--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,7 +312,7 @@ body.nav-active {overflow: hidden;}
 
 .rectangulo::before {
   content: "";
-  position: absolute;
+  position: relative;
   height: 300px;
   width: 300px;
   background-image: conic-gradient(red 20deg, transparent 120deg);
