--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,7 +302,6 @@ body.nav-active {overflow: hidden;}
 .rectangulo {
   width: 110px;
   height: 160px;
-  margin-top: -150px;
   background-color: aliceblue;
   position: relative;
   overflow: hidden;
@@ -338,7 +337,7 @@ body.nav-active {overflow: hidden;}
 }
 
 .inicio{
-  position: absolute;
+  position: relative;
 }
 
 
