--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@
    /* font-family */
 
   --fontFamily-forum: 'Forum', cursive;
-  --fontFamily-dm_sans: 'DM Sans', sans-serif;
+  --fontFamily-dm_sans: "Libre Baskerville", serif;
 
 
   /* font-size */
