--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,6 +267,8 @@ body.nav-active {overflow: hidden;}
  #REUSED STYLE
 \*-------------------------------*/
 
+.container { padding-inline: 16px;}
+
 
 
 
