--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,7 +347,13 @@ body.nav-active {overflow: hidden;}
 }
 
 
+/*-------------------------------*\
+ #HEADER
+\*-------------------------------*/
 
+.navbar,
+.overlay,
+.header .btn {display: none;}
 
 
 
