--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,6 +355,17 @@ body.nav-active {overflow: hidden;}
 .overlay,
 .header .btn {display: none;}
 
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: transparent;
+  padding-block: 40px;
+  z-index: 4;
+
+
+}
 
 
 
