--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,8 +363,20 @@ body.nav-active {overflow: hidden;}
   background-color: transparent;
   padding-block: 40px;
   z-index: 4;
+  border-block-end: 1px solid transparent;
+  transition: var(--transition-1);
 
+}
 
+.header.active  {
+  padding-block: 20px;
+  background-color: var(--eerie-black-4);
+  border-color: var(--black-alpha-15);
+}
+
+.header.hide{
+  transform: translateY(-100%);
+  transition-delay: 250ms;
 }
 
 
