--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,19 @@ body.nav-active {overflow: hidden;}
   width: 30px;
   height: 2px;
   background-color: var(--white);
+  margin-block: 4px;
+  transform-origin: left;
+  animation: 400ms ease-in-out alternate infinite;
 }
+
+@keyframes menuBtn {
+  0% { transform: scaleX(1); }
+  100% { transform: scaleX(0.5);}
+} 
+
+.nav-opne-btn .line-2 { animation-delay: 150ms;}
+
+.nav-opne-btn .line-3 { animation-delay: 300ms;}
 
 
 
