--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,7 +351,7 @@ body.nav-active {overflow: hidden;}
  #HEADER
 \*-------------------------------*/
 
-.navbar,
+
 .overlay,
 .header .btn {display: none;}
 
@@ -398,7 +398,7 @@ body.nav-active {overflow: hidden;}
   background-color: var(--white);
   margin-block: 4px;
   transform-origin: left;
-  animation: 400ms ease-in-out alternate infinite;
+  animation: menuBtn 400ms ease-in-out alternate infinite;
 }
 
 @keyframes menuBtn {
@@ -409,6 +409,22 @@ body.nav-active {overflow: hidden;}
 .nav-opne-btn .line-2 { animation-delay: 150ms;}
 
 .nav-opne-btn .line-3 { animation-delay: 300ms;}
+
+.navbar {
+  position: fixed;
+  background-color: var(--smoky-black-1);
+  top: 0;
+  left: -360px;
+  bottom: 0;
+  max-width: 360px;
+  width: 100%;
+  padding-inline: 30px;
+  padding-block-end: 50px;
+  overflow-y: auto;
+  visibility: hidden;
+  z-index: 2;
+  transition: var(--transition-2);
+}
 
 
 
