--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,5 +426,19 @@ body.nav-active {overflow: hidden;}
   transition: var(--transition-2);
 }
 
+.navbar.active {
+  visibility: visible;
+  transform: translateX(360px);
+}
+
+.navbar .close-btn {
+  color: var(--white);
+  border: 1px solid currentColor;
+  padding: 4px;
+  border-radius: var(--radius-circle);
+  margin-inline-start: auto;
+  margin-block: 30px 20px;
+}
+
 
 
