--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -503,6 +503,53 @@ body.nav-active {overflow: hidden;}
 .section2 { 
   background-color: rgb(239, 153, 153);
   height: max-content;
+  max-width: auto;
+  margin: 0px;
+  text-align: center;
+  color: black;
+  border-bottom: 3px dashed black;
+  z-index: 2;
+}
+
+.section-subtitle {
+  position: relative;
+  top: 100px;
+  left: 150px;
+  text-align: center;
+  text-align: justify;
+  font-size: 40px;
+}
+
+.text2 {
+  padding: 10px;
+  width: 600px;
+  position: relative;
+  left: 800px;
+  bottom: 50px;
+
+}
+
+.section-description-2 {
+  position: relative;
+  text-align: justify;
+  font-size: 20px;
+}
+
+
+
+/*-------------------------------*\
+ #
+\*-------------------------------*/
+
+.section3 {
+  background-color: rgb(200, 53, 53);
+  height: max-content;
+  max-width: auto;
+  margin: 0px;
+  text-align: center;
+  color: black;
+  border-bottom: 3px dashed black;
+  z-index: 2;
 }
 
 
