--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -520,6 +520,11 @@ body.nav-active {overflow: hidden;}
   font-size: 40px;
 }
 
+.p1 {
+  margin: 10px 30px;
+  margin-block-start: 0px;
+}
+
 .text2 {
   padding: 10px;
   width: 600px;
@@ -531,6 +536,7 @@ body.nav-active {overflow: hidden;}
 
 .section-description-2 {
   position: relative;
+  bottom: 40px;
   text-align: justify;
   font-size: 20px;
 }
@@ -545,11 +551,17 @@ body.nav-active {overflow: hidden;}
   background-color: rgb(200, 53, 53);
   height: max-content;
   max-width: auto;
-  margin: 0px;
+  margin: 0px 0px;
   text-align: center;
   color: black;
   border-bottom: 3px dashed black;
   z-index: 2;
+}
+
+.title2 {
+  background-color: aliceblue;
+  text-align: center;
+  text-align: justify;
 }
 
 
