--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
    --smoky-black-1: rgb(255, 255, 255);
    --smoky-black-2: rgb(255, 255, 255);
    --smoky-black-3: rgb(255, 255, 255);
-   --eerie-black-1: rgb(255, 255, 255); /**color fondo */
+   --eerie-black-1: rgb(255, 255, 255); /*color fondo*/
    --eerie-black-2: rgb(255, 255, 255);
    --eerie-black-3: rgb(0, 0, 0);
    --eerie-black-4: rgb(0, 0, 0);
@@ -353,9 +353,9 @@ body.nav-active {overflow: hidden;}
 
 
 .overlay,
-.header .btn {display: none;}
+.container .btn {display: none;}
 
-.header {
+.container {
   position: fixed;
   top: 0;
   left: 0;
@@ -365,21 +365,19 @@ body.nav-active {overflow: hidden;}
   z-index: 4;
   border-block-end: 1px solid transparent;
   transition: var(--transition-1);
-
 }
 
-.header.active  {
+.container.active  {
   padding-block: 20px;
   background-color: var(--eerie-black-4);
   border-color: var(--black-alpha-15);
 }
 
-.header.hide{
+.container.hide{
   transform: translateY(-100%);
   transition-delay: 250ms;
 }
-
-.header .container {
+.container {
   padding-inline: 20px;
   display: flex;
   justify-content: space-between;
@@ -445,22 +443,15 @@ body.nav-active {overflow: hidden;}
  #HERO
 \*-------------------------------*/
 
-/* .img1 {
-  height: 600px;
-  width: 1880px;
-  margin: 0px;
-  z-index: 1;
-} */
-
-.hero {
-  background-color: aqua;
-  height:max-content;
-  width: 100%;
-  margin: 0px;
-  text-align: center;
-  color: black;
-  border-bottom: 3px dashed black;
-
+.img1 {
+ background-image: url(/assets/images/portada.jpg);
+ background-position: center bottom;
+ background-repeat: no-repeat;
+ background-size: cover;
+ min-height: 70vh;
+ display: flex;
+ align-items: center;
+ 
 }
 
 .hero-text {
@@ -480,6 +471,7 @@ body.nav-active {overflow: hidden;}
 }
 
 .btn {
+  color: black;
   position: relative;
   top: 120px;
   scale: 2;
@@ -501,16 +493,9 @@ body.nav-active {overflow: hidden;}
  #
 \*-------------------------------*/
 
-.section2 { 
-  background-color: rgb(239, 153, 153);
-  height: max-content;
-  max-width: auto;
-  margin: 0px;
-  text-align: center;
-  color: black;
-  border-bottom: 3px dashed black;
-  z-index: 2;
-}
+.section2 {
+  background: rgb(255, 255, 255)
+  }
 
 .section-subtitle {
   position: relative;
@@ -549,18 +534,10 @@ body.nav-active {overflow: hidden;}
 \*-------------------------------*/
 
 .section3 {
-  background-color: rgb(200, 53, 53);
-  height: max-content;
-  max-width: auto;
-  margin: 0px 0px;
-  text-align: center;
-  color: black;
-  border-bottom: 3px dashed black;
-  z-index: 2;
-}
+  background-color: rgba(212, 212, 218, 0.415);
+  }
 
 .title2 {
-  /* background-color: aliceblue; */
   position: relative;
   left: 100px;
   top: 40px;
@@ -585,6 +562,13 @@ body.nav-active {overflow: hidden;}
   left: 112px;  
   height: 730px;
   width: 615px;
+}
+
+.gif-1 {
+  position: relative;
+  top: 450px;
+  left: 800px;
+  scale: 2;
 }
 
 
