--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -444,14 +444,15 @@ body.nav-active {overflow: hidden;}
 \*-------------------------------*/
 
 .img1 {
+ top: 0;
  background-image: url(/assets/images/portada.jpg);
+ padding: 10px;
  background-position: center bottom;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 70vh;
  display: flex;
  align-items: center;
- 
 }
 
 .hero-text {
@@ -471,21 +472,24 @@ body.nav-active {overflow: hidden;}
 }
 
 .btn {
-  color: black;
   position: relative;
-  top: 120px;
-  scale: 2;
+  top: 80px;
+  left: 740px;
+}
+
+.ntb {
+  position: relative;
+  top: 40px;
+  left: 15px;
   z-index: 2;
 }
 
 .circle {
-  background-color: aquamarine;
+  background-color: rgb(184, 193, 190);
   height: 50px;
   width: 50px;
   border-radius: 50%;
   position: relative;
-  top: 80px;
-  left: 740px;
 }
 
 
@@ -534,41 +538,72 @@ body.nav-active {overflow: hidden;}
 \*-------------------------------*/
 
 .section3 {
-  background-color: rgba(212, 212, 218, 0.415);
+  background-image: linear-gradient(rgb(234, 231, 231), white);
+  height: 710px;
+
   }
 
 .title2 {
   position: relative;
-  left: 100px;
-  top: 40px;
   text-align: center;
   text-align: justify;
-  margin: 80px 680px;
-  margin-block-start: 0px;
+  margin: 80px 665px;
   font-size: 30px;
+  top: 50px;
+  left: 100px;
 }
 
 .section-view {
-  /* background-color: aliceblue; */
   position: relative;
   margin: 20px 700px ;
   left: 70px;
 }
 
 .imag2 {
-  position: relative;
+  position: absolute;
   margin: 10px;
-  top: -425px;
-  left: 112px;  
-  height: 730px;
-  width: 615px;
+  top: 1290px;
+  left: 80px;  
+  height: 650px;
+  width: 620px;
 }
 
 .gif-1 {
   position: relative;
-  top: 450px;
-  left: 800px;
+  top: 220px;
+  left: 900px;
   scale: 2;
 }
 
+.btn-primar {
+  position: absolute;
+  left: 765px;
+}
 
+
+
+/*-------------------------------*\
+ #
+\*-------------------------------*/
+
+.section4 {
+  top: 0;
+  background-image: url(/assets/images/image3.jpg);
+  padding: 10px;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.section-title{
+  position: relative;
+  text-align: center;
+  margin-top: 0px;
+  font-size: 50px;
+  top: -300px;
+  left: 650px;
+}
